fix: harden ACME failure handling in renewal loop
CA rejections (stale orders, malformed responses) bump the cert
attempts and fall back to a fresh order; network errors, rate
limits and CA outages retry in the same state. Order polls fetch
once per cycle. Policy lives in AcmeFailureClassifier with fast
pure unit tests replacing five heavy harness runs.